fix(lang-java): address DM_NUMBER_CTOR